RbA Build/src/objects/Tech_Measure_Offset_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Add_or_Subtract__c</fullName>
        <description>Add
Subtract</description>
        <label>Add or Subtract</label>
        <picklist>
            <picklistValues>
                <fullName>Add</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subtract</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Offset_Value__c</fullName>
        <label>Offset Value</label>
        <precision>4</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The type of offset</description>
        <inlineHelpText>Pick the offset type</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Interior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exterior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Horizontal Mullion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vertical Mullion</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rSuite_Configuration__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>rSuite Configuration</label>
        <referenceTo>rSuite_Configuration__c</referenceTo>
        <relationshipLabel>Tech Measure Offset Configuration</relationshipLabel>
        <relationshipName>Tech_Measure_Offset_Configuration</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Tech Measure Offset Configuration</label>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tech Measure Offset Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>